--- a/force-app/main/default/classes/LeadTriggerHandler.cls
+++ b/force-app/main/default/classes/LeadTriggerHandler.cls
@@ -34,11 +34,7 @@ public with sharing class LeadTriggerHandler {
 		for (Lead ld : leadsToNormalize) {
 			if (ld.title == 'vp' || ld.title.contains('v.p.') || ld.title.contains('vice president')) {
 				ld.Title = 'Vice President';
-			} else if (
-				ld.title.contains('mgr') ||
-				ld.title.contains('manage') ||
-				ld.title.contains('head of department')
-			) {
+			} else if (ld.title.contains('mgr') || ld.title.contains('manage') || ld.title.contains('head of department')) {
 				ld.Title = 'Manager';
 			} else if (ld.title.contains('exec') || ld.title == 'chief' || ld.title.contains('head')) {
 				ld.Title = 'Executive';
@@ -61,23 +57,24 @@ public with sharing class LeadTriggerHandler {
 	 */
 	public static void handleAutoLeadScoring(List<Lead> leadsToScore) {
 		for (Lead ld : leadsToScore) {
-			Integer score = 10;
+			Integer score = 0;
 
 			// Check and add points based on the specified conditions
 			if (ld.LeadSource == 'Website' && ld.Email != null) {
-				score = 3;
+				score += 3;
 			}
 
 			if (ld.Phone != null) {
-				score = 5;
+				score += 5;
 			}
 
 			if (ld.Industry == 'Technology') {
-				score = 10;
+				score += 10;
 			}
 
 			ld.Lead_Score__c = score; // Set the computed score back to the lead
 		}
+		
 	}
 
 	/* 
@@ -107,7 +104,12 @@ public with sharing class LeadTriggerHandler {
 		// Step 1: Gather all lead emails
         Map<Id,String> leadToEmailMap = new Map<Id,String>();
 		for (Lead lead : leads) {
-			leadToEmailMap.put(lead.Id, lead.Email);
+			if (lead.IsConverted || String.isBlank(lead.Email)){
+				continue;
+			} else {
+				leadToEmailMap.put(lead.Id, lead.Email);
+			}
+			
 		}
 
 		// Step 2: Find matching contacts based on email
